RESOLVED FIXED56316
Stalled media elements don't stop delaying the load event
https://bugs.webkit.org/show_bug.cgi?id=56316
Summary Stalled media elements don't stop delaying the load event
Joseph Pecoraro
Reported 2011-03-14 10:42:47 PDT
If a media element is stalled, or doesn't load without user interaction, the media element should stop deferring the (window's) load event. The spec does also say: http://www.whatwg.org/specs/web-apps/current-work/multipage/video.html#concept-media-load-resource > "When a user agent decides to completely stall a download, e.g. if it is > waiting until the user starts playback before downloading any further > content, the element's delaying-the-load-event flag must be set to false." There are a number of points we can stall that seem to be affected: • super early, after load start but before getting meta data (or any data if user required). • early, after meta data but before real data
Attachments
[PATCH] Suggested Fix: Stop Delaying @ stalled + suspend events (3.91 KB, patch)
2011-03-14 11:33 PDT, Joseph Pecoraro
no flags
Joseph Pecoraro
Comment 1 2011-03-14 10:49:46 PDT
The spec also says: > When a user agent decides to completely stall a download, e.g. if it is waiting > until the user starts playback before downloading any further content, the > element's delaying-the-load-event flag must be set to false. This stops > delaying the load event.
Joseph Pecoraro
Comment 2 2011-03-14 10:50:41 PDT
Sorry about the double paste.
Joseph Pecoraro
Comment 3 2011-03-14 10:57:34 PDT
Joseph Pecoraro
Comment 4 2011-03-14 11:33:24 PDT
Created attachment 85693 [details] [PATCH] Suggested Fix: Stop Delaying @ stalled + suspend events
WebKit Commit Bot
Comment 5 2011-03-14 21:11:46 PDT
Comment on attachment 85693 [details] [PATCH] Suggested Fix: Stop Delaying @ stalled + suspend events Clearing flags on attachment: 85693 Committed r81104: <http://trac.webkit.org/changeset/81104>
WebKit Commit Bot
Comment 6 2011-03-14 21:11:52 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.