2011-03-14  Joseph Pecoraro  <joepeck@webkit.org>

Reviewed by Eric Carlson.

        Stalled media elements don't stop delaying the load event
        https://bugs.webkit.org/show_bug.cgi?id=56316

        * http/tests/media/video-play-stall-before-meta-data-expected.txt: Added.
        * http/tests/media/video-play-stall-before-meta-data.html: Added.
2011-03-14  Joseph Pecoraro  <joepeck@webkit.org>

        Reviewed by Eric Carlson.

        Stalled media elements don't stop delaying the load event
        https://bugs.webkit.org/show_bug.cgi?id=56316

        We should stop delaying the load event when the load has
        stalled naturally, or if we require a user gesture to
        continue the load.

        Test: http/tests/media/video-play-stall-before-meta-data.html

        * html/HTMLMediaElement.cpp:
        (WebCore::HTMLMediaElement::setNetworkState): when suspending, stop delaying.
        (WebCore::HTMLMediaElement::progressEventTimerFired): when stalling, stop delaying.

Canonical link: https://commits.webkit.org/70984@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@81104 268f45cc-cd09-0410-ab3c-d52691b4dbfc